# eae-transfer

./: .gitignore  README.md  pyproject.toml
eae/dataset/: common.py  dataset.py
eae/eval/: common.py  eval.py
eae/eval/rams/: README.md  constraints.py  event_role_multiplicities.txt  predictions_to_rams_format.py  scorer.py  scoring_utils.py
eae/eval/wikievents/: scorer.py  utils.py
eae/inference/: inference_infilling.py  inference_qa.py
eae/preprocessing/: preprocess_infilling.py  preprocess_qa.py
eae/training/: train_infilling.py  train_qa.py
prompts/: README.md
prompts/eae_experiments/: README.md  system_prompt1.txt  system_prompt2.txt  system_prompt3.txt
prompts/paraphrase_generation/: README.md  question_prompt_ex.txt  template_prompt_ex.txt
scripts/inference/qa/: predict_qa.sh
scripts/inference/ti/: predict_ti.sh
scripts/training/qa/: train_famus_qa.sh  train_rams_qa.sh  train_wikievents_qa.sh
scripts/training/ti/: train_famus_infilling.sh  train_rams_infilling.sh  train_wikievents_infilling.sh
